Prevent jump on social share click.

--- a/components/interactive/social_share/_social_share.scss
+++ b/components/interactive/social_share/_social_share.scss
@@ -18,6 +18,7 @@ Style guide: interactive.social-share
     display: inline-block;
     color: $text-link;
     padding: 1.5em 0.5em;
+    pointer-events: none;
 
     &:hover {
       text-decoration: none;
